Update coming soon message with emoji

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 </head>
 <body>
   <div class="coming-soon">
-    <h1>Coming Soon</h1>
-    <p>نحن نعمل على شيء مذهل قادم قريبًا! 🚀</p>
+    <h1>Coming Soon 🚀</h1>
   </div>
 </body>
 </html>
